[package]
name = "helang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
clap = "3.2.17"
pest = "2.2.1"
pest_derive = "2.2.1"

# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
# salsa = { git = "https://github.com/salsa-rs/salsa.git", package = "salsa-2022" }

[dev-dependencies]
expect-test = "1.4.0"
